--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": "npm run prettier:check"
+    "src/**/*.{ts,tsx}": "eslint"
   },
   "browserslist": {
     "production": [
@@ -57,7 +57,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^6.0.0",
+    "husky": "^4.3.8",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.1"
   }
